--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1906,3 +1906,16 @@ table tbody .bx {
 .trainings-container  #filterForm select {
     width: 10rem;
 }
+
+/* DATE PICKER */
+.datepicker {
+    width: 35.2rem;
+}
+
+.datepicker table {
+    width: 100%;
+}
+
+/* .datepicker table tr td.active.active {
+    background-color: var(--primary-color);
+} */
