--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1470,6 +1470,12 @@ table tbody .bx {
     color: var(--primary-color);
 }
 
+.add-form .req-container, .edit-form .req-container {
+    height: 15rem;
+    /* border: 1px solid; */
+    overflow-y: scroll;
+}
+
 /* PROFILE */
 .profile-container, .agency-prog-container, .edit-form, .add-form {
     position: absolute;
