--- a/public/css/style.css
+++ b/public/css/style.css
@@ -594,6 +594,32 @@ span.badge {
     font-weight: bold;
 }
 
+#map {
+    height: 500px;
+    width: 100%;
+}
+
+.controls {
+    background-color: #fff;
+    border: 1px solid transparent;
+    border-radius: 2px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+    box-sizing: border-box;
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 300;
+    height: 40px;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-bottom: 22px;
+    padding: 0 11px 0 13px;
+    text-overflow: ellipsis;
+    width: 300px;
+}
+.controls:focus {
+    border-color: #4d90fe;
+}
+
 
 /* TABLES */
 table thead .table-head {
