--- a/public/css/style.css
+++ b/public/css/style.css
@@ -638,14 +638,15 @@ table tbody .bx {
 .pwd-browse-prog {
     position: absolute;
     top: 8rem;
+    padding-left: 8rem;
     margin-bottom: 3rem;
     display: flex;
-    flex-direction: column;
-    width: 100%;
+    /* flex-direction: column; */
+    width: 100vw;
 }
 
 .pwd-browse-prog .filter-container {
-    position: fixed;
+    position: relative;
     width: 18rem;
     /* margin-left: 3rem; */
     /* background-color: #04b000; */
@@ -655,9 +656,9 @@ table tbody .bx {
     height: 80vh;
     box-shadow: var(--side-shadow-02);
     background-color: var(--bg-color-02);
-    left: 8rem;
-    top: 8rem;
-    z-index: 98;
+    left: 2.5rem;
+    top: 1.8rem;
+    /* z-index: 98; */
     overflow-y: scroll;
 }
 
@@ -728,15 +729,15 @@ table tbody .bx {
 
 .pwd-browse-prog .outer {
     width: 90%;
-    height: 40rem;
+    height: 50rem;
     display: flex;
     justify-content: center;
     overflow-y: scroll;
 }
 
 .pwd-browse-prog .browse-area {
-    width: 90%;
-    margin-left: 12rem;
+    width: 70%;
+    /* margin-left: 12rem; */
 }
 
 .pwd-browse-prog .prog-grid {
@@ -830,10 +831,43 @@ table tbody .bx {
     text-wrap: nowrap;
 }
 
+.pwd-browse-prog .no-result {
+    font-style:italic;
+    font-weight:normal;
+    text-align:center;
+    margin-top:2rem;
+}
+
+.pwd-browse-prog .recommend-label {
+    padding-bottom:0.6rem;
+    border-bottom:3px solid var(--primary-color);
+}
+
+.pwd-browse-prog .recommend-label-container {
+    width:100%;
+}
+
+.pwd-browse-prog .prog-grid .location {
+    overflow-x:hidden; 
+    text-wrap:nowrap; 
+    text-overflow:ellipsis;
+}
+
 /* PAGINATION */
 /* .pagination {
     height: 2rem;
 } */
+
+.pagination-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+}
+
+.pagination {
+    width: 100%;
+}
 
 .pagination .page-item.active {
    background-color: var(--primary-color);
@@ -847,6 +881,7 @@ table tbody .bx {
 
 .pagination nav {
     width: 100%;
+    padding: 0.7rem;
 }
 
 .pagination .d-none {
@@ -1191,6 +1226,10 @@ table tbody .bx {
     margin-bottom: 1.5rem;
 }
 
+.agency-show-prog .apply-btn-container .error {
+    width:10rem;
+}
+
 .details-container .body .more-info {
     height: 10rem;
 }
@@ -1235,6 +1274,7 @@ table tbody .bx {
 
 .agency-show-prog .request-grid .request-container .owner-name {
     text-align: start;
+    width: 20rem;
 }
 
 .agency-show-prog .request-grid .request-container .request-owner p {
@@ -1248,6 +1288,9 @@ table tbody .bx {
 
 .agency-show-prog .request-grid .request-container .request-owner .location {
     font-size: 17px;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+    text-wrap: nowrap;
 }
 
 .agency-show-prog .request-grid .request-container .request-pic {
@@ -1514,6 +1557,21 @@ table tbody .bx {
 }
 
 /* PROFILE */
+.alert {
+    position:fixed; 
+    bottom:3.5rem; 
+    right:4rem; width:30rem; 
+    /* background-color:var(--primary-color);  */
+    border:3px dashed var(--primary-color); 
+    z-index:100;
+}
+
+.alert a {
+    font-weight: 700;
+    text-decoration: underline;
+    color: var(--text-error);
+}
+
 .profile-container, .agency-prog-container, .edit-form, .add-form {
     position: absolute;
     top: 9rem;
@@ -1945,4 +2003,9 @@ table tbody .bx {
 .users-container .submit-btn,  .users-container .deny-btn{
     padding-top: 0.7rem;
     padding-bottom: 0.7rem;
+}
+
+/* MAP */
+.map {
+    height: 400px; width: 100%;
 }
