--- a/public/css/page.css
+++ b/public/css/page.css
@@ -38,8 +38,8 @@
         rgba(0, 0, 0, 0.24) 0px 1px 2px;
     --side-shadow-03: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
     --side-shadow-04: rgba(0, 0, 0, 0.15) 0px 2px 8px;
-    --side-shadow-05: rgba(27, 31, 35, 0.04) 0px 1px 0px,
-        rgba(255, 255, 255, 0.25) 0px 1px 0px inset;
+    --side-shadow-05: rgba(27, 31, 35, 0.04) 0px 1px 0px;
+    --side-shadow-06: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 
     --border-radius: 0.5rem;
 
@@ -216,7 +216,7 @@ li {
     grid-area: page-content;
 }
 
-footer {
+footer .footer-container {
     position: relative;
     bottom: 0;
     background-color: var(--text-color);
@@ -225,6 +225,7 @@ footer {
     grid-template-columns: 1fr 1.3fr;
     grid-template-areas: "socials contact";
     grid-gap: 5rem;
+    box-shadow: var(--side-shadow-04);
 }
 
 footer h5,
@@ -404,6 +405,7 @@ footer .btn button {
 /* NAVBAR */
 .navbar {
     border-bottom: 1px solid black;
+    box-shadow: var(--side-shadow-03);
     padding-left: 2rem;
     padding-right: 2rem;
 }
@@ -444,6 +446,15 @@ footer .btn button {
 /* CONTENT CONTAINER */
 .page-content {
     padding: 1rem 1.5rem 0 1.5rem;
+}
+
+/* DATE PICKER */
+.datepicker {
+    width: 35.2rem;
+}
+
+.datepicker table {
+    width: 100%;
 }
 
 /* NOTIFICATIONS */
