--- a/public/css/page.css
+++ b/public/css/page.css
@@ -1172,6 +1172,15 @@ span.badge {
     border-radius: 100%;
     margin-right: 1rem;
     border: 3px solid var(--primary-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.agency-show-prog .request-grid .request-container .request-pic span {
+    font-size: 2rem;
+    font-weight: var(--header-extrabold);
+    color: var(--primary-color);
 }
 
 .agency-show-prog .request-grid .btn-container {
