--- a/public/css/page.css
+++ b/public/css/page.css
@@ -941,6 +941,45 @@ span.badge {
     padding: 1.5rem;
 }
 
+.filter-container .slider {
+    height: 0.5rem;
+    border-radius: var(--border-radius);
+    background-color: lightgray;
+    position: relative;
+}
+
+.filter-container .slider .progress {
+    height: 0.5rem;
+    border-radius: var(--border-radius);
+    position: absolute;
+    left: 25%;
+    right: 25%;
+    background-color: var(--primary-color-light);
+}
+
+.filter-container .range-input {
+    position: relative;
+}
+
+.filter-container .range-input input {
+    position: absolute;
+    top: -7.5px;
+    height: 0.5rem;
+    width: 100%;
+    background: none;
+    -webkit-appearance: none;
+    pointer-events: none;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    height: 1rem;
+    width: 1rem;
+    border-radius: 50%;
+    -webkit-appearance: none;
+    pointer-events: auto;
+    background-color: var(--primary-color);
+}
+
 .filter-container .count {
     font-weight: normal;
     color: var(--primary-color);
