--- a/public/css/page.css
+++ b/public/css/page.css
@@ -1724,6 +1724,10 @@ input[type="range"]::-webkit-slider-thumb {
     display: flex;
     justify-content: center;
 } */
+
+.agency-prog-container .outer {
+    height: 80vh;
+}
 .agency-prog-container .prog-grid {
     position: relative;
     left: 2.5rem;
