--- a/public/css/page.css
+++ b/public/css/page.css
@@ -1832,7 +1832,8 @@ input[type="range"]::-webkit-slider-thumb {
 }
 
 /* TABLES */
-table thead .table-head {
+table thead .table-head,
+table tbody .table-head {
     background-color: var(--primary-color);
     color: var(--bg-color-01);
     text-align: center;
